# communication-interface

./: .env  .gitignore  CMakeLists.txt  DESIGN.md  Dockerfile  README.md  REQUIREMENTS.md  docker-compose.yml
inc/: AESCBCSecurity.h  CommunicationInterface.h  DataPacket.h  ISecurity.h
src/: AESCBCSecurity.cpp  CommunicationInterface.cpp  main.cpp
test/: CommunicationInterfaceTest.cpp
